1.7.3
---

- ilGenImage now returns ILuint.
- Added pkgconfig devil.pc.
- Applied bugfixes from Richard Sims (mainly .psd).
- Added new Xcode framework.

1.7.2
---
- Added preliminary OpenEXR support.
- Fixed crash in ilSwapColours with images having bits-per-channel greater than 8.
- Fixed ilClearImage not clearing images properly with bpc greater than 8.
- Added MSVC++ 8 projects back.
- Added MSVC++ Unicode projects.

1.7.1
---
- Added Mac OS X .icns support
- Fixed a bug with non-standard .ico files that have PNG compression and palettes.
- Added JPEG 2000 support with JasPer.
- Added support for 256x256 and 512x512 JPEG 2000 encoded .icns.

1.7.0
---
- Fixed a windows padding problem with bitmaps (thanks to robin_charlton)
- Added ILUT-X11 thank's to Jesse Maurais patch
- fixed PNM loading problem if the image contained 0x20 (a gray) in the beginning of the image
- added internal asserts to check pedanticaly check consistency in debug builds
- fixed SSE3 check
- added support for lua with swig
- from now the format of an opengl image can be GL_ALPHA too. (only when for opengl, not usable anywhere else). it's more an hack then a solution.
- new versions of ilReadRLE8Bmp, ilReadRLE4Bmp from Björn Ganster
- applied submitted patch #1645286. patch for reading X offset and Y offset from TIFF files.
- fixed lump reading bug. from Bjürn Ganster
- Fixed gif loading patched from Bjürn Ganster
- Fixed bug #1643309.  wrong buffer size on ilSaveL with IL_BMP
- Fixed some iluCompareImage patched from James Kirkpatrick
- Fixed many security holes patched from Bjürn Ganster
- fixed bug #1637588. iMemSwap bugs
- fixed bug #1634099. Infinite loop on corrupt JPEG
- applied submitted patch #1632474. GIF loading fails on incomplete images
- applied patch #1612477. _UNICODE / UNICODE fixes. more win32 unicode fixes.
- TIFF compression method changed to LZW
- added the DEPRECATED macro and deprecated iluGenImage and iluDeleteImage
- glCompress2DARB now works with OS X too.